# routes/index.js
@@ -3,6 +3,7 @@ const router = express.Router();
 
 const controller = require('../controller/index');
 
-router.get('/', controller.message);
+router.get('/index', controller.message);
+router.use('/contacts', require('./contacts'));
 
 module.exports = router;
